# XsecResponse

./: .gitignore  CMakeLists.txt  Makefile  README.md  makesplines.sh  setup.sh
inputs/: DUNE_numu_templates_v0.root  DUNE_numu_templates_v0_erec.root  make_template_official.C  postfit_fluxonly.root
scripts/: makespline2019_numuCC1pi.sh
src_bin/: CMakeLists.txt  make_xsec_response_1d.cc  make_xsec_response_1d_NDGAr.cc  make_xsec_response_2d.cc  make_xsec_response_2d_NDGAr.cc
src_lib/: CMakeLists.txt  LinkDef.h  SRGlobal.cc  SRGlobal.h  XsecVary.cc  XsecVary.h  XsecVary2D.cc  XsecVary2D.h  XsecVary2D_NDGAr.cc  XsecVary2D_NDGAr.h  XsecVary_NDGAr.cc  XsecVary_NDGAr.h
